# mcp-github-issues

./: .env.example  .gitignore  README.md  pyproject.toml
src/: server.py
src/config/: config.py
src/mcp_github_issues/: server.py
src/mcp_github_issues/tools/: get_issue.py  update_issue.py  update_issue_body.py  update_issue_title.py
src/mcp_github_issues/utils/: get_request.py  patch_request.py
src/tools/: get_issue.py
src/utils/: get_request.py
