[project]
name = "mcp-github-issues"
version = "0.1.0"
description = "MCP server for GitHub issues"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mcp-github-issues = "mcp_github_issues.server:main"
